<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/nav_habits" />
    
    <item
        android:id="@+id/nav_mood"
        android:icon="@drawable/ic_heart_rate"
        android:title="@string/nav_mood" />
    
    <item
        android:id="@+id/nav_hydration"
        android:icon="@drawable/ic_hydration"
        android:title="@string/nav_hydration" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_settings" />
</menu>

